--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!doctype html>
 <html lang="en-us">
 <head>
+    <script src="adSense.js"></script>
+    
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>The Fish Master  Unblocked - Unblocked Games 66</title>
